Schemas and stylesheets on iit instance of gitlab. Just data in local server. Schema to use for validation extracted from xsi:noNamespaceSchemaLocation and stylesheet processing instruction href altered to be same origin compliant (route in secure proxy to mirror gitlab)

--- a/docker-compose.examplepartial.yml
+++ b/docker-compose.examplepartial.yml
@@ -2,6 +2,7 @@ services:
   words-api:
     environment:
       WAITRESS_THREADS : 6
+      ROOT_URL : http://localhost:8888
     ports:
       "8892:5000"
     volumes:
